<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="run">Run</string>
    <string name="spnDataset">Dataset</string>
    <string name="spnOptimizer">Optimizer</string>
    <string name="spnLearningRate">Learning rate</string>
    <string name="spnMomentum">Momentum</string>
    <string name="spnL2Regularization">L2-regularization</string>
    <string name="spnBatchSize">Batch size</string>
    <string name="spnMaxIteration">#iterations</string>
    <string name="spnIteratorDistribution">Iterator distribution</string>
    <string name="spnMaxSamples">Max test samples</string>
    <string name="spnGar">Distributed GAR</string>
    <string name="spnCommunicationPattern">Communication Pattern</string>

    <string name="ping">Ping</string>
    <string name="pong">Pong</string>

    <string name="transfer">Transfer</string>
    <string name="run_local">Run locally</string>
    <string name="run_isolated">Run isolated</string>
    <string name="run_distr_sim0">S 0</string>
    <string name="run_distr_sim1">S 1</string>
    <string name="run_distr_sim2">S 2</string>
    <string name="run_distr_sim3">S 3</string>
    <string name="run_distr_sim4">S 4</string>
    <string name="run_distr_sim5">S 5</string>
    <string name="run_distr_sim6">S 6</string>
    <string name="run_distr_sim7">S 7</string>
    <string name="dataset">Dataset</string>
    <string name="training">Training</string>
    <string name="neuralnetwork">Neural Network</string>
    <string name="iterator">Iterator</string>
    <string name="spnBehavior">Behavior</string>

    <string name="peers">%1$d, %2$d peers</string>
    <string name="wan_address">WAN Address</string>
    <string name="model_poisoning">MITM local model poisoning</string>
    <string name="spnAttack">Attack</string>
    <string name="spnNumAttackers">#attackers</string>
</resources>
