<?xml version="1.0" encoding="utf-8"?>

<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.cardview.widget.CardView style="@style/Card">

        <LinearLayout style="@style/outerLinearLayout">

            <TextView
                style="@style/CardLabel"
                android:text="@string/neuralnetwork" />

            <GridLayout style="@style/GridLayout">

                <LinearLayout style="@style/innerLinearLayout">

                    <TextView
                        style="@style/InputLabel"
                        android:text="@string/spnOptimizer" />

                    <Spinner
                        android:id="@+id/spnOptimizer"
                        style="@style/Spinner" />
                </LinearLayout>

                <LinearLayout style="@style/innerLinearLayout">

                    <TextView
                        style="@style/InputLabel"
                        android:text="@string/spnLearningRate" />

                    <Spinner
                        android:id="@+id/spnLearningRate"
                        style="@style/Spinner" />

                </LinearLayout>

                <LinearLayout style="@style/innerLinearLayout">

                    <TextView
                        style="@style/InputLabel"
                        android:text="@string/spnMomentum" />

                    <Spinner
                        android:id="@+id/spnMomentum"
                        style="@style/Spinner" />
                </LinearLayout>

                <LinearLayout style="@style/innerLinearLayout">

                    <TextView
                        style="@style/InputLabel"
                        android:text="@string/spnL2Regularization" />

                    <Spinner
                        android:id="@+id/spnL2Regularization"
                        style="@style/Spinner" />

                </LinearLayout>
            </GridLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</merge>
