<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Card">

    <LinearLayout style="@style/outerLinearLayout">

        <TextView
            style="@style/CardLabel"
            android:text="@string/iterator" />

        <GridLayout style="@style/GridLayout">

            <LinearLayout style="@style/innerLinearLayout">

                <TextView
                    style="@style/InputLabel"
                    android:text="@string/spnBatchSize" />

                <Spinner
                    android:id="@+id/spnBatchSize"
                    style="@style/Spinner" />
            </LinearLayout>

            <LinearLayout style="@style/innerLinearLayout">

                <TextView
                    style="@style/InputLabel"
                    android:text="@string/spnIteratorDistribution" />

                <Spinner
                    android:id="@+id/spnIteratorDistribution"
                    style="@style/Spinner" />

            </LinearLayout>

            <LinearLayout style="@style/innerLinearLayout">

                <TextView
                    style="@style/InputLabel"
                    android:text="@string/spnMaxSamples" />

                <Spinner
                    android:id="@+id/spnMaxSamples"
                    style="@style/Spinner" />

            </LinearLayout>
        </GridLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
